MDL-74815 course: Fixed the color contrast in site homepage

--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -14292,6 +14292,8 @@ span.editinstructions {
   .coursebox .info {
     display: flex;
     align-items: center; }
+  .coursebox .moreinfo .icon {
+    margin-right: 0; }
 
 #frontpage-available-course-list,
 #frontpage-course-list,
